--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "react-modal-video": "^1.2.10",
     "react-redux": "^8.0.4",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.14.1",
