--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "react-responsive": "^10.0.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
     "react-spinners": "^0.14.1",
     "react-to-print": "^3.0.2",
     "react-visibility-sensor": "^5.1.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
-    "swiper": "^8.4.4",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9",
     "uuid": "^9.0.0",
     "yet-another-react-lightbox": "^2.2.0"
   },
